--- a/Dairy_Care_System/dairy/static/css/reguserlist.css
+++ b/Dairy_Care_System/dairy/static/css/reguserlist.css
@@ -186,3 +186,18 @@ tr:nth-child(even) {
     background-color: #e0e7ff; /* Light background on hover */
     color: #2b6cb0; /* Change text color on hover */
 }
+
+/* Styling for the back link in the upper left corner */
+.back-link {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 25px;
+    color: black;
+    text-decoration: none;
+    font-family: 'Comic Sans MS', cursive;
+}
+
+.back-link:hover {
+    text-decoration: underline;
+}
