--- a/Dairy_Care_System/templates/deliveryboyassigns.html
+++ b/Dairy_Care_System/templates/deliveryboyassigns.html
@@ -311,9 +311,8 @@
     <!-- Side Navigation -->
     <div id="mySidenav" class="sidenav"><br><br><br><br>
         <a href="{% url 'deliveryboyassigns' %}"><i class="fas fa-truck"></i> Your Deliveries</a><br>
-        <a href="{% url 'deliverydetailsall' %}"><i class="fas fa-shopping-basket"></i> Delivery Details</a><br>
-        <a href="#"><i class="fas fa-shopping-basket"></i> Feedback Review</a><br>
-        <a href="#"><i class="fas fa-shopping-basket"></i> Products List</a><br>
+        <a href="{% url 'deliverydetailsall' %}"><i class="fas fa-shopping-basket"></i> Delivery History</a><br>
+        <a href="#"><i class="fas fa-comments"></i> Feedback Review</a><br>
         <a href="#"><i class="fas fa-bell"></i>  Notifications</a><br>
     </div>
 
