--- a/Dairy_Care_System/templates/adminmilkdetails.html
+++ b/Dairy_Care_System/templates/adminmilkdetails.html
@@ -3,14 +3,14 @@
 <html lang="en">
 <head>
     <title>Milk Details</title>
-    <link rel="stylesheet" href="{% static 'css/adminpage.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/adminpage.css' %}"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             background: url('{% static "images/milkdetails.jpg" %}') no-repeat center center fixed;
             background-size: cover;
-            margin-left: 250px;
+            /* margin-left: 250px; */
             font-family: 'Arial', sans-serif;
         }
 
@@ -136,7 +136,7 @@
 <body>
 
     <!-- Side Navigation (Always Visible) -->
-    <div id="mySidenav" class="sidenav"><br><br><br><br>
+    <!-- <div id="mySidenav" class="sidenav"><br><br><br><br>
         <a href="{% url 'reguserlist' 'all' %}"><i class="fas fa-users"></i>  Manage Users</a>
         <a href="{% url 'addemployee' %}" style="padding-left: 45px; font-size: 1.3em;"><i class="fas fa-user-plus"></i> Add Employee</a><br>
         <a href="{% url 'adminproductslist' %}" id="product"><i class="fas fa-shopping-basket"></i>  Manage Products</a><br>
@@ -146,10 +146,10 @@
         <a href="{% url 'adminmilkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Manage Milk</a><br>
         <a href="{% url 'adminstocknotification' %}"><i class="fas fa-bell"></i> Notifications</a><br>
         <a href="{% url 'adminfeedbackreview' %}"><i class="fas fa-comments"></i>  Feedback Review</a><br>
-    </div>
+    </div> -->
 
     <!-- Navigation Bar -->
-    <ul>
+    <!-- <ul>
         <div class="brand-name"><i class="fas fa-cow"></i><span>Dairy Care System</span></div>
         <div class="header">
             <div class="nav-item">
@@ -162,8 +162,9 @@
                 </li>
             </div>
         </div>
-    </ul>
+    </ul> -->
     
+    <a href="{% url 'adminpage' %}" class="back-link"><b>&larr; BACK</b></a>
     <center>
         <h1>Milk Production Details</h1>
         <table>
