--- a/Dairy_Care_System/templates/adminproductstock.html
+++ b/Dairy_Care_System/templates/adminproductstock.html
@@ -7,14 +7,14 @@
     <title>Stock Details</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/adminpage.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/adminpage.css' %}"> -->
     <style>
         body {
             background: url("{% static 'images/productstock.jpg' %}") no-repeat center center fixed;
             background-size: cover;
             font-family: 'Arial', sans-serif;
             color: #333;
-            margin-left: 250px;
+            /* margin-left: 250px; */
             padding: 0;
         }
 
@@ -182,7 +182,7 @@
 <body>
 
 <!-- Side Navigation (Always Visible) -->
-<div id="mySidenav" class="sidenav"><br><br><br><br>
+<!-- <div id="mySidenav" class="sidenav"><br><br><br><br>
     <a href="{% url 'reguserlist' 'all' %}"><i class="fas fa-users"></i>  Manage Users</a>
     <a href="{% url 'addemployee' %}" style="padding-left: 45px; font-size: 1.3em;"><i class="fas fa-user-plus"></i> Add Employee</a><br>
     <a href="{% url 'adminproductslist' %}" id="product"><i class="fas fa-shopping-basket"></i>  Manage Products</a><br>
@@ -192,10 +192,10 @@
     <a href="{% url 'adminmilkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Manage Milk</a><br>
     <a href="{% url 'adminstocknotification' %}"><i class="fas fa-bell"></i> Notifications</a><br>
     <a href="{% url 'adminfeedbackreview' %}"><i class="fas fa-comments"></i>  Feedback Review</a><br>
-</div>
+</div> -->
 
 <!-- Navigation Bar -->
-<ul>
+<!-- <ul>
     <div class="brand-name"><i class="fas fa-cow"></i><span>Dairy Care System</span></div>
     <div class="header">
         <div class="nav-item">
@@ -208,7 +208,9 @@
             </li>
         </div>
     </div>
-</ul><br>
+</ul> -->
+
+    <a href="{% url 'adminpage' %}" class="back-link"><b>&larr; BACK</b></a><br>
 
     <h1><strong>Stock Details</strong></h1>
     <div class="table-container">
