--- a/Dairy_Care_System/templates/animalslist.html
+++ b/Dairy_Care_System/templates/animalslist.html
@@ -24,13 +24,13 @@
     <!-- Side Navigation (Always Visible) -->
     <div id="mySidenav" class="sidenav"><br><br>
         <a href="{% url 'productslist' %}" id="product"><i class="fas fa-shopping-basket"></i>  Products List</a>
-        <a href="{% url 'addproducts' %}" style="padding-left: 30px; font-size: 1.2em;"><i class="fa fa-cart-plus"></i>Add Product</a><br>
+        <a href="{% url 'addproducts' %}" style="padding-left: 35px; font-size: 1.0em;"><i class="fa fa-cart-plus"></i>Add Product</a><br>
         <a href="{% url 'animalslist' %}" id="animal"><i class="fas fa-paw"></i>Animals List</a>
-        <a href="{% url 'addanimal' %}" style="padding-left: 30px; font-size: 1.2em;"><i class="fas fa-plus-circle"></i>Add Animal</a><br>
-        <a href="{% url 'diseasedetection' %}" style="padding-left: 30px; font-size: 1.2em;"><i class="fas fa-heartbeat"></i>Health Checker</a><br>
+        <a href="{% url 'addanimal' %}" style="padding-left: 35px; font-size: 1.0em;"><i class="fas fa-plus-circle"></i>Add Animal</a><br>
+        <a href="{% url 'diseasedetection' %}" style="padding-left: 35px; font-size: 1.0em;"><i class="fas fa-heartbeat"></i>Health Checker</a><br>
         <a href="{% url 'orderdetails' %}"><i class="fas fa-shopping-bag"></i>  Order Details</a><br>
         <a href="{% url 'preorderfarm' %}"><i class="fas fa-clipboard-list"></i>  Pre-Order Details</a><br>
-        <a href="{% url 'milkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
+        <!-- <a href="{% url 'milkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br> -->
         <a href="{% url 'farmerproductstock' %}"><i class="fas fa-boxes"></i>  Stock Details</a><br>
         <a href="{% url 'stocknotification' %}"><i class="fas fa-bell"></i> Notifications
             <!--  class="notification-badge" <span class="badge" id="notification-count">{{ unread_count }}</span>  -->
