--- a/Dairy_Care_System/templates/deliveryassigns.html
+++ b/Dairy_Care_System/templates/deliveryassigns.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivery Assignments</title>
+    <!-- <link rel="stylesheet" href="{% static 'css/adminpage.css' %}"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <style>
@@ -30,10 +31,24 @@
             font-family: Copperplate, Papyrus, fantasy;
             font-size: 2.5rem;
             margin-bottom: 1rem;
+            position: relative; /* To allow absolute positioning of the :after pseudo-element */
+        }
+
+        .page-header h1:after {
+            content: '';
+            display: block;
+            width: 50%;
+            height: 3px;
+            background: linear-gradient(90deg, transparent, #050b6d, transparent);
+            position: absolute;
+            bottom: -2px;
+            left: 25%;
         }
 
         .page-header p {
             color: #0e0f11;
+            font-size: 20px;
+            font-family: Copperplate, Papyrus, fantasy;
         }
 
         .orders-container {
@@ -221,9 +236,41 @@
 </head>
 <body>
 
+    <body>
+        <!-- Side Navigation (Always Visible) -->
+        <!-- <div id="mySidenav" class="sidenav"><br><br><br><br>
+            <a href="{% url 'reguserlist' 'all' %}"><i class="fas fa-users"></i>  Manage Users</a>
+            <a href="{% url 'addemployee' %}" style="padding-left: 45px; font-size: 1.3em;"><i class="fas fa-user-plus"></i> Add Employee</a><br>
+            <a href="{% url 'adminproductslist' %}" id="product"><i class="fas fa-shopping-basket"></i>  Manage Products</a><br>
+            <a href="{% url 'deliveryassigns' %}"><i class="fas fa-truck"></i>  Assign Deliveries</a><br>
+            <a href="{% url 'adminanimalslist' %}"><i class="fas fa-paw"></i>  Manage Animals</a><br>
+            <a href="{% url 'adminproductstock' %}"><i class="fas fa-boxes"></i>  Manage Stock</a><br>
+            <a href="{% url 'adminmilkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Manage Milk</a><br>
+            <a href="{% url 'adminstocknotification' %}"><i class="fas fa-bell"></i> Notifications</a><br>
+            <a href="{% url 'adminfeedbackreview' %}"><i class="fas fa-comments"></i>  Feedback Review</a><br>
+        </div> -->
+        
+        <!-- Navigation Bar -->
+        <!-- <ul>
+            <div class="brand-name"><i class="fas fa-cow"></i><span>Dairy Care System</span></div>
+            <div class="header">
+                <div class="nav-item">
+                    <li>
+                        <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
+                        <div class="dropdown-content" id="dropdown-content">
+                            <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
+                            <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                        </div>
+                    </li>
+                </div>
+            </div>
+        </ul> -->
+    
+    <a href="{% url 'adminpage' %}" class="back-link"><b>&larr; BACK</b></a><br>
+
     <div class="page-header">
-        <h1><i class="fas fa-truck"></i> Delivery Assignments</h1>
-        <p>Manage and assign deliveries to delivery partners</p>
+        <h1><i class="fas fa-truck"></i> Delivery Assignments</h1><br>
+        <p><b>Manage and assign deliveries to delivery partners</b></p>
     </div>
 
     <div class="orders-container">
