--- a/Dairy_Care_System/templates/regmailverify.html
+++ b/Dairy_Care_System/templates/regmailverify.html
@@ -283,7 +283,7 @@
         const errorMessage = document.getElementById("error-message");
 
         // Regex for validating email with "gmail.com" or "mca.ajce.in" domains
-        const emailPattern = /^[a-zA-Z0-9._%+-]+@(gmail\.com|mca\.ajce\.in)$/;
+        const emailPattern = /^[a-zA-Z0-9._%+-]+@(gmail\.com|mca\.ajce\.in|amaljyothi\.ac\.in)$/;
 
         // Live validation on input event
         emailInput.addEventListener("input", validateEmail);
