--- a/Dairy_Care_System/templates/addproducts.html
+++ b/Dairy_Care_System/templates/addproducts.html
@@ -409,7 +409,7 @@
     }
 
     // Your Google Cloud API Key
-    const API_KEY = 'AIzaSyBLSAPqtZQ4KhCTNP9zkM2Dke9giqwhENc';
+    const API_KEY = settings.API_KEY;
     
     // Function to validate the uploaded image using Google Cloud Vision API
     async function validateImage(file) {
