--- a/Dairy_Care_System/templates/orderhistory.html
+++ b/Dairy_Care_System/templates/orderhistory.html
@@ -385,7 +385,7 @@
             <!-- <span><strong>DeliveryAgent:</strong> {{ order.deliveryboy_id }}</span> -->
             <span><strong>Total:</strong> ₹ {{ order.total_price }}</span>
             <a href="{% url 'ordersummary' order.id %}" class="view-summary"><strong>View Receipt</strong></a>
-            <!-- <a href="#" class="view-summary" onclick="openTrackOrderModal({{ order.id }})"><strong>Track Order</strong></a> -->
+            <a href="#" class="view-summary" onclick="openTrackOrderModal({{ order.id }})"><strong>Track Order</strong></a>
             {% if order.status == 'Pending' or order.status == 'Confirmed' or order.status == 'Shipped' %}
                 <button class="cancel-order-btn" data-order-id="{{ order.id }}">Cancel Order</button>
             {% elif order.status == 'Cancelled' %}
